add tip about not move AS crystals
can cause the big corruption, and maybe other bad things

--- a/Client/overrides/config/tips.cfg
+++ b/Client/overrides/config/tips.cfg
@@ -70,6 +70,7 @@ general {
 	need to move your rats long distances or through dimensions? use a Rat Sack to store them safely!
 	Nuclearcraft collectors are handy 1-block solutions for water or cobblestone
 	Signalum-Plated ducts can transfer power and whatever the Duct type normally carries
+ 	Don't relocate Astral Sorcery Crystals by any means other than breaking them with your tools, it can cause great problems for your world.
      >
 
     # The color of the actual tip text. [default: FFFFFF]
