--- a/Client/manifest.json
+++ b/Client/manifest.json
@@ -1678,6 +1678,11 @@
       "projectID": 231484,
       "fileID": 2862651,
       "required": true
+    },
+    {
+      "projectID": 456083,
+      "fileID": 4092487,
+      "required": true
     }
   ],
   "overrides": "overrides"
