--- a/Client/overrides/config/Fishs_Undead_Rising.cfg
+++ b/Client/overrides/config/Fishs_Undead_Rising.cfg
@@ -175,8 +175,8 @@ general {
         minecraft:gold_nugget,0.05
         minecraft:iron_nugget,0.05
         minecraft:diamond,0.01
-        minecraft:nether_star,0.001
-        rats:fish_barrel,0.1
+        mysticalagradditions:stuff,0.002
+        rats:fish_barrel,0.04
         rats:rat_nugget_ore,0.1
         rats:cheese,0.1
      >
