give (almost) every ore a scanner color
makes rare ores module actually usable!!

--- a/Client/overrides/config/scannable.cfg
+++ b/Client/overrides/config/scannable.cfg
@@ -130,12 +130,92 @@ general {
         oreArdite=0xB77E11
         oreCobalt=0x413BB8
         oreCinnabar=0xF5DA25
-        oreInfusedAir=0xF7E677
-        oreInfusedFire=0xDC7248
-        oreInfusedWater=0x9595D5
-        oreInfusedEarth=0x49B45A
-        oreInfusedOrder=0x9FF2DE
-        oreInfusedEntropy=0x545476
+        oreCrystalAir=0xF7E677
+        oreCrystalFire=0xDC7248
+        oreCrystalWater=0x9595D5
+        oreCrystalEarth=0x49B45A
+        oreCrystalOrder=0x9FF2DE
+        oreCrystalEntropy=0x545476
+        oreCrystalTaint=0x782AD1
+        oreQuartzBlack=0x2B2B2B
+        oreCertusQuartz=0xBADAE6
+        oreCertusQuartz=0xA6D0E0
+        oreSapphire=0x0C3C96
+        oreAmethyst=0xA12DCF
+        oreAstralStarmetal=0x051559
+        oreAquamarine=0x1275CC
+        oreBone=0x9E927A
+        oreRelic=0xEDC226
+        oreGarnet=0x540605
+        oreOpal=0xD4D2D2
+        oreSalt=0xE0E0CA
+        oreRuby=0xC91B12
+        orePeridot=0xB9E34D
+        oreTopaz=0xE67409
+        oreTanzanite=0x6C0D91
+        oreMalachite=0x159638
+        oreAmber=0xE8931C
+        oreJade=0x0DDB6a
+        oreFossil=0x8A8272
+        oreGneiss=0xBA9750
+        orePetrifiedWood=0x6E3629
+        oreApatite=0x1068B5
+        oreAncientDebris=0x91352D
+        oreOsmium=0xACD1E8
+        oreTenebrum=0x181C1C
+        oreNagrilite=0x3D2345
+        oreEbonys=0x171414
+        oreArchaic=0x7A5979
+        oreProsperity=0xBCD4D2
+        oreInferium=0x74B357
+        oreThorium=0x2B2020
+        oreBoron=0x636262
+        oreLithium=0xBFBBBB
+        oreMagnesium=0xE0A4D1
+        oreEnderBiotite=0x262526
+        oreDimensionalShard=0x7DFAFF
+        oreGalena=0x6D59AB
+        oreIridium=0xB5B5B5
+        oreBauxite=0xAD5757
+        orePyrite=0xE3B93B
+        oreSphalerite=0xA3BD46
+        oreTungsten=0x4A4A4A
+        oreSheldonite=0x156A8A
+        oreSodalite=0x0D2C6E
+        oreAurorianCoal=0x2E2E2E
+        oreCerulean=0x4CF5E1
+        oreAurorianGeode=0xAD689A
+        oreMoonstone=0xE8E3E7
+        oreOctine=0xF2852C
+        oreValonite=0xD4A1C9
+        oreSulfur=0xEDE213
+        oreScabyst=0x5EAB6D
+        oreSyrmorite=0x485ADB
+        oreAquaMiddleGem=0x2E65F0
+        oreCrimsonMiddleGem=0xEB322F
+        oreGreenMiddleGem=0x0BBA0B
+        oreLifeCrystal=0xFFFFFF
+        oreClathrateOilSand=0x181C1C
+        oreClathrateOilShale=0x181C1C
+        oreClatherateRedstone=0x8F0404
+        oreClathrateGlowstone=0xBFAE2E
+        oreClathrateEnder=0x0B3815
+        oreTiberium=0x0BDE1D
+        oreAurorium=0xC23811
+        orePrometheum=0x181C1C
+        oreDuranite=0x9DBCBD
+        oreValyrium=0xC95147
+        oreVibranium=0xCFE6dF
+        oreKarmesine=0xFC5E3A
+        oreOvium=0x0B39D4
+        oreJauxum=0x0DBF2B
+        orePalladium=0xD48208
+        oreUru=0xA38EA3
+        oreOsram=0xF0C48B
+        oreEezo=0x181C1C
+        oreAbyssum=0x5D9179
+        oreDilithium=0x91B7BA
+        oreRutile=0x733B7A
      >
 
     # Ore dictionary entries considered common ores, requiring the common ore scanner module.
