expand excavation blacklist
more things that should not really be excavatable

--- a/Client/overrides/config/oreexcavation.cfg
+++ b/Client/overrides/config/oreexcavation.cfg
@@ -18,8 +18,172 @@ general {
         minecraft:stone
         minecraft:dirt
         minecraft:grass
+        minecraft:sand
+        minecraft:gravel
+        
         minecraft:netherrack
-        minecraft:log*
+        minecraft:soul_sand
+        
+        minecraft:end_stone
+        
+        iceandfire:dread_stone
+        iceandfire:dread_stone_bricks
+        iceandfire:dread_stone_bricks_chiseled
+        iceandfire:dread_stone_bricks_cracked
+        iceandfire:dread_stone_bricks_mossy
+        iceandfire:dread_stone_tile
+        iceandfire:dread_stone_face
+        iceandfire:dread_stone_stairs
+        iceandfire:dread_stone_slab
+        iceandfire:dreadwood_log
+        iceandfire:dreadwood_planks
+        iceandfire:dread_stone_slab_double
+        iceandfire:chared_dirt
+        iceandfire:chared_grass
+        iceandfire:chared_stone
+        iceandfire:chared_cobblestone
+        iceandfire:chared_gravel
+        iceandfire:chared_grass_path
+        iceandfire:ash
+        iceandfire:frozen_dirt
+        iceandfire:frozen_grass
+        iceandfire:frozen_stone
+        iceandfire:frozen_cobblestone
+        iceandfire:frozen_gravel
+        iceandfire:frozen_grass_path
+        iceandfire:frozen_splinters
+        iceandfire:dragon_ice
+        iceandfire:dragon_ice_spikes
+        iceandfire:myrmex_resin
+        iceandfire:myrmex_resin_sticky
+        
+        atum:sand
+        atum:limestone_gravel
+        atum:marl
+        atum:limestone_cracked
+        atum:limestone
+        
+        astralsorcery:blockmarble
+        
+        appliedenergistics2:cable_bus
+        
+        biomesoplenty:grass
+        biomesoplenty:dirt
+        biomesoplenty:white_sand
+        biomesoplenty:dried_sand
+        biomesoplenty:ash_block
+        biomesoplenty:mud
+        biomesoplenty:flesh
+        biomesoplenty:hive
+        biomesoplenty:honey_block
+        
+        dimdoors:fabric
+        dimdoors:ancient_fabric
+        dimdoors:unravelled_fabric
+        
+        erebus:umberstone
+        erebus:gneiss
+        
+        littletiles:blocklittletiles
+        
+        midnight:nightstone
+        midnight:trenchstone
+        midnight:midnight_dirt
+        midnight:midnight_grass
+        midnight:midnight_mycelium
+        midnight:deceitful_peat
+        midnight:deceitful_mud
+        
+        mysticalagriculture:soulstone
+        
+        quark:basalt
+        quark:marble
+        quark:limestone
+        quark:jasper
+        quark:slate
+        quark:biome_cobblestone
+        quark:elder_prismarine
+        
+        rats:marbled_cheese_raw
+        rats:marbled_cheese
+        rats:marbled_cheese_slab
+        rats:marbled_cheese_stairs
+        rats:marbled_cheese_tile
+        rats:marbled_cheese_chiseled
+        rats:marbled_cheese_pillar
+        rats:marbled_cheese_brick
+        rats:marbled_cheese_brick_slab
+        rats:marbled_cheese_brick_stairs
+        rats:marbled_cheese_brick_chiseled
+        rats:marbled_cheese_brick_cracked
+        rats:marbled_cheese_brick_mossy
+        rats:marbled_cheese_dirt
+        rats:marbled_cheese_grass
+        
+        stygian:endgrass
+        stygian:endobsidian
+        stygian:endmagma
+        
+        thaumcraft:taint_fibre
+        thaumcraft:taint_crust
+        thaumcraft:taint_soil
+        thaumcraft:taint_rock
+        thaumcraft:taint_geyser
+        thaumcraft:taint_feature
+        thaumcraft:porous_stone
+        
+        thaumicaugmentation:stone
+        
+        theaurorian:aurorianstone
+        theaurorian:auroriangrass
+        theaurorian:auroriangrasslight
+        theaurorian:aurorianperidotite
+        
+        thebetweenlands:betweenstone
+        thebetweenlands:mud
+        thebetweenlands:peat
+        thebetweenlands:sludgy_dirt
+        thebetweenlands:spreading_sludgy_dirt
+        thebetweenlands:cragrock
+        thebetweenlands:pitstone
+        thebetweenlands:limestone
+        thebetweenlands:swamp_dirt
+        thebetweenlands:swamp_grass
+        thebetweenlands:silt
+        thebetweenlands:dead_grass
+        thebetweenlands:tar_solid
+        thebetweenlands:log_weedwood
+        thebetweenlands:log_rotten_bark
+        thebetweenlands:log_spreading_rotten_bark
+        thebetweenlands:weedwood
+        thebetweenlands:log_portal
+        thebetweenlands:portal_frame
+        
+        twilightforest:maze_stone
+        twilightforest:hedge
+        twilightforest:tower_wood
+        twilightforest:castle_brick
+        twilightforest:castle_stairs_brick
+        twilightforest:castle_stairs_cracked
+        twilightforest:castle_stairs_worn
+        twilightforest:castle_pillar
+        twilightforest:castle_stairs
+        twilightforest:castle_rune_brick
+        twilightforest:thorns
+        twilightforest:thorn_rose
+        twilightforest:dark_leaves
+        twilightforest:aurora_block
+        
+        taiga:meteoritecobble_block
+        taiga:obsidioritecobble_block
+        taiga:meteorite_block
+        taiga:obsidiorite_block
+        
+        tconstruct:slime_dirt
+        tconstruct:slime_grass
+        
+        treasure2:wishing_well_block
+        treasure2:desert_wishing_well_block
      >
 
     # Amount of exaustion per block excavated [range: 0.0 ~ 3.4028235E38, default: 0.1]
