nerf undead rising intestines slightly again
uses progressive bosses nether star shard, which needs 8 and to be crafted with a nether star in order to copy it, so you can't bypass wither via intestines now
droprate should be ~1/187, which is 1/8th of 1500 (sum of 500x3, equal to odds of getting 3 MA star shards)

--- a/Client/overrides/config/Fishs_Undead_Rising.cfg
+++ b/Client/overrides/config/Fishs_Undead_Rising.cfg
@@ -175,7 +175,7 @@ general {
         minecraft:gold_nugget,0.05
         minecraft:iron_nugget,0.05
         minecraft:diamond,0.01
-        mysticalagradditions:stuff,0.002
+        progressivebosses:nether_star_shard,0.005347
         rats:fish_barrel,0.04
         rats:rat_nugget_ore,0.1
         rats:cheese,0.1
