limit integrated dynamics energy transfer
maxint for its price is very questionable

--- a/Client/overrides/config/integrateddynamics.cfg
+++ b/Client/overrides/config/integrateddynamics.cfg
@@ -53,7 +53,7 @@ core {
     B:general.cacheCableModels=true
 
     # The maximum network energy transfer rate.
-    I:general.energyRateLimit=2147483647
+    I:general.energyRateLimit=25600
 
     # If the ingredient network observer can work on separate thread.
     B:general.ingredientNetworkObserverEnableMultithreading=true
