update some material traits
remove morganlefay trait, giving diamatine lightweight and sharp as tool traits (jade gets nothing in return, it has a mazillion traits, losing one on head piece is arguably fine)
remove imperomite's signature trait because it can unfilitered mobcapture
remove prometheum's signature trait because it can just set the NoAI flag on hit entities
remove enori's signature trait because it blocks death for a questionably low price

--- a/Client/overrides/config/tweakersconstruct.cfg
+++ b/Client/overrides/config/tweakersconstruct.cfg
@@ -177,7 +177,31 @@ miscelleaneous {
 	soularium:core:superhot_armor
 	soularium:plates:infernal_armor
 	soularium:trim:vengeful_armor
-	jade:head:jaded,crumbling,botanical2,morganlefay
+	diamatine_actadd_plustic:head:lightweight,sharp
+	diamatine_actadd_plustic:handle:lightweight
+    	diamatine_actadd_plustic:extra:lightweight
+	diamatine_actadd_plustic:core:invigorating_armor
+	diamatine_actadd_plustic:plates:invigorating_armor
+	diamatine_actadd_plustic:trim:invigorating_armor
+	imperomite:head:stalwart
+	imperomite:handle:ecological
+	imperomite:extra:ecological
+	imperomite:core:mundane2_armor
+	imperomite:plates:mundane2_armor
+	imperomite:trim:mundane2_armor
+	prometheum:head:enderference
+	prometheum:handle:enderference
+	prometheum:extra:enderference
+	prometheum:core:shielding_armor
+	prometheum:plates:magnetic2_armor
+	prometheum:trim:magnetic2_armor
+	enori_actadd_plustic:head:writable
+	enori_actadd_plustic:handle:sharp
+	enori_actadd_plustic:extra:sharp
+	enori_actadd_plustic:core:magnetic1_armor
+	enori_actadd_plustic:plates:steady_armor
+	enori_actadd_plustic:trim:steady_armor
+	jade:head:jaded,crumbling,botanical2
 	jade:handle:jaded,naturebound,crude2,mirable
 	jade:extra:jaded,naturebound,crude2,analysing
 	jade:bow:jaded,ratty,enderport-2
