--- a/Client/overrides/config/treechop.cfg
+++ b/Client/overrides/config/treechop.cfg
@@ -89,7 +89,7 @@ compatibility {
 
             # Comma-separated list of items that should not chop when used to break a log
             # Ore dictionary names are also acceptable [default: mekanism:atomic_disassembler,]
-            S:choppingToolsBlacklist=mekanism:atomic_disassembler,botania:terra_axe,tconstruct:lumberaxe,extrautils2:fireaxe
+            S:choppingToolsBlacklist=mekanism:atomic_disassembler,botania:terra_axe,tconstruct:lumberaxe,extrautils2:fireaxe,enderio:item_dark_steel_axe,enderio:item_end_steel_axe,theaurorian:aurorianiteaxe
         }
 
         specific {
