blacklist some rare saplings from roots's spreading forest ritual

--- a/Client/overrides/config/roots/general.cfg
+++ b/Client/overrides/config/roots/general.cfg
@@ -34,7 +34,14 @@ main {
     # List of mod:item:meta (meta optional) of saplings that should be blacklisted from the Spreading Forest ritual
     S:SaplingBlacklist <
         roots:wildwood_sapling
+        corvus:frankinsence_sapling
         thebetweenlands:sapling_spirit_tree
+        twilightforest:twilight_sapling:4
+        twilightforest:twilight_sapling:5
+        twilightforest:twilight_sapling:6
+        twilightforest:twilight_sapling:7
+        twilightforest:twilight_sapling:8
+        randomthings:spectresapling
      >
 
     # List of mod:item:meta (meta optional) of saplings that should be planted in 2x2 by the Spreading Forest ritual
