add lcrdrfs mobs to capture blacklist they are swoled so yeah

--- a/Client/overrides/config/bloodmagic/bloodmagic.cfg
+++ b/Client/overrides/config/bloodmagic/bloodmagic.cfg
@@ -611,6 +611,9 @@ values {
 		mowziesmobs:frostmaw;0
 		mowziesmobs:grottol;0
 		mowziesmobs:naga;0
+		lcrdrfs:laser_creeper;0
+		lcrdrfs:robo_dino;0
+		lcrdrfs:jet_pack_spider;0
 		openblocks:cartographer;0
 		openblocks:luggage;0
 		openblocks:mini_me;0
