--- a/Client/overrides/config/industrialforegoing.cfg
+++ b/Client/overrides/config/industrialforegoing.cfg
@@ -395,6 +395,9 @@ general {
         mowziesmobs:frostmaw
         mowziesmobs:grottol
         mowziesmobs:naga
+        lcrdrfs:laser_creeper
+		lcrdrfs:robo_dino
+		lcrdrfs:jet_pack_spider
         openblocks:cartographer
         openblocks:luggage
         openblocks:mini_me
