--- a/Client/overrides/config/thaumadditions.cfg
+++ b/Client/overrides/config/thaumadditions.cfg
@@ -341,6 +341,9 @@ entities {
         mowziesmobs:frostmaw
         mowziesmobs:grottol
         mowziesmobs:naga
+        lcrdrfs:laser_creeper
+		lcrdrfs:robo_dino
+		lcrdrfs:jet_pack_spider
         openblocks:cartographer
         openblocks:luggage
         openblocks:mini_me
