remove cyclic multijump and quickdraw enchants

--- a/Client/overrides/config/cyclicmagic.cfg
+++ b/Client/overrides/config/cyclicmagic.cfg
@@ -737,7 +737,7 @@ cyclicmagic {
         B:EnchantExpBoost=true
 
         #  Set false to delete - requires restart [default: true]
-        B:EnchantLaunch=true
+        B:EnchantLaunch=false
 
         #  Set false to delete - requires restart [default: true]
         B:EnchantLifeLeech=true
@@ -749,7 +749,7 @@ cyclicmagic {
         B:EnchantMultishot=false
 
         #  Set false to delete - requires restart [default: true]
-        B:EnchantQuickdraw=true
+        B:EnchantQuickdraw=false
 
         #  Set false to delete - requires restart [default: true]
         B:EnchantReach=false
