update mobcapture blacklist for Betweenlands 3.9.0 also permit capture/spawning of several passive BL mobs

--- a/Client/overrides/config/bloodmagic/bloodmagic.cfg
+++ b/Client/overrides/config/bloodmagic/bloodmagic.cfg
@@ -670,11 +670,13 @@ values {
 		theaurorian:spirit;0
 		theaurorian:undeadknight;0
 		beneath:shadow;0
+		thebetweenlands:anadia;0
 		thebetweenlands:angler;0
 		thebetweenlands:ash_sprite;0
 		thebetweenlands:barrishee;0
 		thebetweenlands:blood_snail;0
 		thebetweenlands:boulder_sprite;0
+		thebetweenlands:bubbler_crab;0
 		thebetweenlands:chiromaw;0
 		thebetweenlands:chiromaw_greebling_rider;0
 		thebetweenlands:chiromaw_hatchling;0
@@ -682,50 +684,32 @@ values {
 		thebetweenlands:chiromaw_tame;0
 		thebetweenlands:crypt_crawler;0
 		thebetweenlands:dark_druid;0
-		thebetweenlands:decay_pit_target;0
 		thebetweenlands:draeton_chiromaw_tamed;0
 		thebetweenlands:draeton_dragonfly;0
 		thebetweenlands:draeton_firefly;0
-		thebetweenlands:dragonfly;0
 		thebetweenlands:dreadful_mummy;0
-		thebetweenlands:emberling;0
 		thebetweenlands:emberling_shaman;0
 		thebetweenlands:fortress_boss;0
-		thebetweenlands:fortress_boss_blockade;0
-		thebetweenlands:fortress_boss_projectile;0
-		thebetweenlands:fortress_boss_spawner;0
-		thebetweenlands:fortress_boss_teleporter;0
-		thebetweenlands:fortress_boss_turret;0
 		thebetweenlands:gas_cloud;0
-		thebetweenlands:gecko;0
 		thebetweenlands:greebling;0
-		thebetweenlands:greebling_volarpad_floater;0
+		thebetweenlands:greebling_coracle;0
 		thebetweenlands:large_sludge_worm;0
 		thebetweenlands:leech;0
 		thebetweenlands:lurker;0
 		thebetweenlands:mire_snail_egg;0
 		thebetweenlands:moving_spawner_hole;0
-		thebetweenlands:multipart_dummy;0
-		thebetweenlands:mummy_arm;0
 		thebetweenlands:peat_mummy;0
 		thebetweenlands:pyrad;0
-		thebetweenlands:root_grabber;0
-		thebetweenlands:root_sprite;0
+		thebetweenlands:rock_snot;0
 		thebetweenlands:shambler;0
 		thebetweenlands:silt_crab;0
 		thebetweenlands:sludge;0
-		thebetweenlands:sludge_jet;0
 		thebetweenlands:sludge_menace;0
-		thebetweenlands:sludge_menace_multipart_dummy;0
-		thebetweenlands:sludge_wall_jet;0
 		thebetweenlands:small_sludge_worm;0
 		thebetweenlands:smoll_sludge;0
-		thebetweenlands:spike_wave;0
 		thebetweenlands:spirit_tree_face_large;0
-		thebetweenlands:spirit_tree_face_mask;0
 		thebetweenlands:spirit_tree_face_small;0
 		thebetweenlands:splodeshroom;0
-		thebetweenlands:sporeling;0
 		thebetweenlands:stalker;0
 		thebetweenlands:swamp_hag;0
 		thebetweenlands:swarm;0
@@ -736,8 +720,6 @@ values {
 		thebetweenlands:tiny_sludge_worm;0
 		thebetweenlands:tiny_sludge_worm_helper;0
 		thebetweenlands:tiny_worm_egg_sac;0
-		thebetweenlands:toad;0
-		thebetweenlands:volarkite;0
 		thebetweenlands:wall_lamprey;0
 		thebetweenlands:wall_living_root;0
 		thebetweenlands:wight;0
