--- a/Client/overrides/config/cofh/thermalexpansion/morbs.cfg
+++ b/Client/overrides/config/cofh/thermalexpansion/morbs.cfg
@@ -385,11 +385,13 @@ Blacklist {
         theaurorian:spirit
         theaurorian:undeadknight
         beneath:shadow
+        thebetweenlands:anadia
         thebetweenlands:angler
         thebetweenlands:ash_sprite
         thebetweenlands:barrishee
         thebetweenlands:blood_snail
         thebetweenlands:boulder_sprite
+        thebetweenlands:bubbler_crab
         thebetweenlands:chiromaw
         thebetweenlands:chiromaw_greebling_rider
         thebetweenlands:chiromaw_hatchling
@@ -397,50 +399,32 @@ Blacklist {
         thebetweenlands:chiromaw_tame
         thebetweenlands:crypt_crawler
         thebetweenlands:dark_druid
-        thebetweenlands:decay_pit_target
         thebetweenlands:draeton_chiromaw_tamed
         thebetweenlands:draeton_dragonfly
         thebetweenlands:draeton_firefly
-        thebetweenlands:dragonfly
         thebetweenlands:dreadful_mummy
-        thebetweenlands:emberling
         thebetweenlands:emberling_shaman
         thebetweenlands:fortress_boss
-        thebetweenlands:fortress_boss_blockade
-        thebetweenlands:fortress_boss_projectile
-        thebetweenlands:fortress_boss_spawner
-        thebetweenlands:fortress_boss_teleporter
-        thebetweenlands:fortress_boss_turret
         thebetweenlands:gas_cloud
-        thebetweenlands:gecko
         thebetweenlands:greebling
-        thebetweenlands:greebling_volarpad_floater
+        thebetweenlands:greebling_coracle
         thebetweenlands:large_sludge_worm
         thebetweenlands:leech
         thebetweenlands:lurker
         thebetweenlands:mire_snail_egg
         thebetweenlands:moving_spawner_hole
-        thebetweenlands:multipart_dummy
-        thebetweenlands:mummy_arm
         thebetweenlands:peat_mummy
         thebetweenlands:pyrad
-        thebetweenlands:root_grabber
-        thebetweenlands:root_sprite
+        thebetweenlands:rock_snot
         thebetweenlands:shambler
         thebetweenlands:silt_crab
         thebetweenlands:sludge
-        thebetweenlands:sludge_jet
         thebetweenlands:sludge_menace
-        thebetweenlands:sludge_menace_multipart_dummy
-        thebetweenlands:sludge_wall_jet
         thebetweenlands:small_sludge_worm
         thebetweenlands:smoll_sludge
-        thebetweenlands:spike_wave
         thebetweenlands:spirit_tree_face_large
-        thebetweenlands:spirit_tree_face_mask
         thebetweenlands:spirit_tree_face_small
         thebetweenlands:splodeshroom
-        thebetweenlands:sporeling
         thebetweenlands:stalker
         thebetweenlands:swamp_hag
         thebetweenlands:swarm
@@ -451,8 +435,6 @@ Blacklist {
         thebetweenlands:tiny_sludge_worm
         thebetweenlands:tiny_sludge_worm_helper
         thebetweenlands:tiny_worm_egg_sac
-        thebetweenlands:toad
-        thebetweenlands:volarkite
         thebetweenlands:wall_lamprey
         thebetweenlands:wall_living_root
         thebetweenlands:wight
