Update brokenwings config blacklist other jetpacks add bypass keys for many dimensions (recipes come slightly later) update mode key (just incase)

--- a/Client/overrides/config/brokenwings.cfg
+++ b/Client/overrides/config/brokenwings.cfg
@@ -50,6 +50,9 @@ countermeasures {
         # See readme on GitHub for examples of how to add extra metadata or dimension conditions [default: ]
         S:items <
             simplyjetpacks:itemjetpack
+            mekanism:jetpack
+            mekanism:armoredjetpack
+            lcrdrfs:jetpack
          >
     }
 
@@ -88,6 +91,13 @@ general {
     # A player with one of these items in their inventory will be immune to the no-flight rule.
     # See readme on GitHub for examples of how to add extra metadata or dimension conditions [default: ]
     S:bypassKeyInventory <
+        rats:rat_upgrade_creative dimension:10
+        rats:rat_upgrade_creative dimension:1000
+        erebus:portal_activator dimension:66
+        atum:scarab dimension:1048
+        theaurorian:crystallinesprite dimension:424
+        twilightforest:lamp_of_cinders dimension:7
+        thaumicaugmentation:research_notes dimension:14676
      >
 
     # The list of dimension IDs, used as a allow-list or deny-list, depending on your other config settings. Internal numeric IDs, please. [default: [7]]
@@ -108,7 +118,7 @@ general {
     # "ALWAYS_DENY": Flying is always disabled, regardless of dimension ID.
     # "ALWAYS_ALLOW": Flying is never disabled (it's like the mod isn't even installed)
     #  [default: DENY_LIST]
-    S:mode=BLACKLIST
+    S:mode=DENY_LIST
     S:whitelistArmor <
      >
     S:whitelistInventory <
