add other Tombstone grave types to dragon break blacklist

--- a/Client/overrides/config/ice_and_fire.cfg
+++ b/Client/overrides/config/ice_and_fire.cfg
@@ -30,6 +30,9 @@ all {
         icbmclassic:concrete:1
         icbmclassic:concrete:2
         tombstone:grave_cross
+        tombstone:grave_simple
+        tombstone:grave_normal
+        tombstone:tombstone
         mekanism:basicblock:2
         enderio:block_reinforced_obsidian
         dungeontactics:obsidianbrick
