disable I&F pixies thieving from you
very rude and just annoy

--- a/Client/overrides/config/ice_and_fire.cfg
+++ b/Client/overrides/config/ice_and_fire.cfg
@@ -328,7 +328,7 @@ all {
     I:"Pixie Village Size"=5
 
     # True if pixies are allowed to steal from players [default: true]
-    B:"Pixies Steal Items"=true
+    B:"Pixies Steal Items"=false
 
     # Default sea serpent attack strength, this is scaled to the sea serpent's particular size [range: 1.0 ~ 10000.0, default: 4.0]
     S:"Sea Serpent Base Attack Strength"=10.0
