fix ancientbeasts bestiary for akashic tome
name wrong, silly emper

--- a/Client/overrides/config/akashictome.cfg
+++ b/Client/overrides/config/akashictome.cfg
@@ -28,7 +28,7 @@ general {
         evilcraft:origins_of_darkness
         draconicevolution:info_tablet
         charset:tablet
-        ancientbeasts:beastiary
+        ancientbeasts:bestiary
      >
     S:"Whitelisted Names" <
         book
